--- a/server/package.json
+++ b/server/package.json
@@ -7,12 +7,16 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/native-stack": "^7.6.2",
+    "axios": "^1.13.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
     "expo-location": "^19.0.7",
     "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "react-native-animatable": "^1.4.0",
     "react-native-maps": "^1.26.18",
     "react-native-reanimated": "^4.1.3",
