--- a/safelink-dashboard/package.json
+++ b/safelink-dashboard/package.json
@@ -18,6 +18,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.0",
     "recharts": "^2.10.0",
+    "safelink-server": "file:../server",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
