--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@react-navigation/native": "^7.1.19",
